tests/mm0_mmu/fail/bad-sort21.mm0
-- strict should be after pure
strict pure sort s21;